r218647 causes getUserMedia to fail on some machines https://bugs.webkit.org/show_bug.cgi?id=173894

Reviewed by Youenn Fablet.

* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::isFrameRateSupported): Change frame rate epsilon from 0.00001
to 0.001.


Canonical link: https://commits.webkit.org/190729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218852 268f45cc-cd09-0410-ab3c-d52691b4dbfc